Removed social-like and added discord link

--- a/index.html
+++ b/index.html
@@ -113,23 +113,7 @@
                                  </div>
                               </a>
                               <div class="profile_header_badge">
-                                 <div class="resizeType">
-                                    <div class="favorite_badge" id="badgesPlace">
-                                       <div class="types-selector" style="margin-left: 4px">
-                                          <input checked="checked" id="bn" type="radio" name="Type" value="bn" />
-                                          <label class="types bn" for="bn"></label>
-                                          <input id="nn" type="radio" name="Type" value="nn" />
-                                          <label class="types nn" for="nn"></label>
-                                          <input id="nb" type="radio" name="Type" value="nb" />
-                                          <label class="types nb" for="nb"></label>
-                                       </div>
-                                    </div>
-                                 </div>
-                                 <div class="resizeType" style="display: none">
-                                    <div class="favorite_badge">
-                                       <a>Disabled because Long Images are enabled.</a>
-                                    </div>
-                                 </div>
+                                       <img src="https://discordapp.com/api/guilds/304986224467378177/widget.png?style=banner2" style="height: 87%;top: 4px;left: 5px;position: relative;">
                               </div>
                            </div>
                            <div class="profile_header_actions">
@@ -147,12 +131,6 @@
                            </div>
                            <div class="header_real_name_spacer">&nbsp;</div>
                            <div class="profile_summary">
-                              <div class="social-likes social-sapic" data-url="https://steam.design/" data-title="I made a cool Steam profile with this! It's so cool!">
-                                 <div class="facebook" title="Share link on Facebook">&nbsp;Facebook</div>
-                                 <div class="twitter" title="Share link on Twitter">&nbsp;Twitter</div>
-                                 <div class="plusone" title="Share link on Google+">&nbsp;Google+</div>
-                                 <div class="vkontakte" title="Share link on VK">&nbsp;VK</div>
-                              </div>
                            </div>
                            <div class="profile_summary_footer">
                               <div class="btn_profile_action btn_medium" id="getBg"><span>Buy This BG</span></div>
