--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                  </div>
                               </a>
                               <div class="profile_header_badge">
-                                       <img src="https://discordapp.com/api/guilds/304986224467378177/widget.png?style=banner2" style="height: 87%;top: 4px;left: 5px;position: relative;">
+                                       <a href="https://discord.gg/jnqnHuX"><img src="https://discordapp.com/api/guilds/304986224467378177/widget.png?style=banner2" style="height: 87%;top: 4px;left: 5px;position: relative;">
                               </div>
                            </div>
                            <div class="profile_header_actions">
