Finally removed disqus. Discord shall take over now.

--- a/index.html
+++ b/index.html
@@ -697,6 +697,7 @@
             Powered by STEAM. Cookies help us deliver our services. By using our services, you agree to our use of cookies.<br>
             Made by <a href="https://steamcommunity.com/id/truecarry">TrueCarry</a> with help from <a href="https://steamcommunity.com/id/theoddball">The Oddball</a><br>
                <span id="version">Version #{{#vernum}}</span>
+            Disqus replaced by discord, if you care. Link is above.
             </span>
          </div>
       </div>
