Made long images default.
Just more user friendly.

--- a/index.html
+++ b/index.html
@@ -174,12 +174,12 @@
                                           <div id="r11"></div>
                                        </div>
                                     </div>
-                                    <div id="r12r" style="height: 82px;" class="screenshot_showcase_smallscreenshot showcase_slot ">
+                                    <div id="r12r" style="height: 82px; display: none;" class="screenshot_showcase_smallscreenshot showcase_slot ">
                                        <div class="screenshot_showcase_screenshot" onclick="ShowModalContent( 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772562&amp;insideModal=1', 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772562', 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772562', true );">
                                           <div id="r12"></div>
                                        </div>
                                     </div>
-                                    <div id="r13r" style="height: 82px;" class="screenshot_showcase_smallscreenshot showcase_slot ">
+                                    <div id="r13r" style="height: 82px; display: none;" class="screenshot_showcase_smallscreenshot showcase_slot ">
                                        <div class="screenshot_showcase_screenshot" onclick="ShowModalContent( 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772655&amp;insideModal=1', 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772655', 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772655', true );">
                                           <div id="r13"></div>
                                        </div>
@@ -194,7 +194,7 @@
                               </div>
                            </div>
                         </div>
-                        <div id="sssc" class="profile_customization">
+                        <div id="sssc" class="profile_customization" style="display:none">
                            <div class="profile_customization_header">Screenshot Showcase
                            </div>
                            <div class="profile_customization_block">
@@ -697,7 +697,6 @@
             Powered by STEAM. Cookies help us deliver our services. By using our services, you agree to our use of cookies.<br>
             Made by <a href="https://steamcommunity.com/id/truecarry">TrueCarry</a> with help from <a href="https://steamcommunity.com/id/theoddball">The Oddball</a><br>
                <span id="version">Version #{{#vernum}}</span>
-            Disqus replaced by discord, if you care. Link is above.
             </span>
          </div>
       </div>
