--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                            <div class="profile_summary">
                            </div>
                            <div class="profile_summary_footer">
-                              <div class="btn_profile_action btn_medium" id="getBg"><span>Buy This BG</span></div>
+                              <div class="btn_profile_action btn_medium" id="getBg"><span>Search For This BG</span></div>
                               <a class="btn_profile_action btn_medium saveButton" id="saveAll"><span>Download ZIP</span></a>
                               <a class="btn_profile_action btn_medium" id="userScript" href="https://github.com/theoddball/sapic-preview-button"><span>Preview Script</span></a>
                            </div>
