--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
                            </div>
                            <div class="header_real_name_spacer">&nbsp;</div>
                            <div class="profile_summary">
+                              <div class="bb_h1" style="top:20px; position: relative; text-align:center;"> 
+                                    <b><a class="bb_link" href="http://paypal.me/theoddball" target="_blank" rel="noreferrer">Like what we're doing? Consider donating? :D</a></b>
+                              </div>
                            </div>
                            <div class="profile_summary_footer">
                               <div class="btn_profile_action btn_medium" id="getBg"><span>Search For This BG</span></div>
