--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
             <span id="footerLogo"><img src="https://steamcommunity-a.akamaihd.net/public/images/skin_1/footerLogo_valve.png" width="96" height="26" border="0" alt="Логотип Valve"></span>
             <span id="footerText">
             Powered by STEAM. Cookies help us deliver our services. By using our services, you agree to our use of cookies.<br>
-            Made by <a href="https://steamcommunity.com/id/truecarry">TrueCarry</a> with help from <a href="https://steamcommunity.com/id/theoddball">The Oddball</a><br>
+            Made with love by <a href="https://steamcommunity.com/id/truecarry">TrueCarry</a> and <a href="https://steamcommunity.com/id/theoddball">The Oddball</a><br>
                <span id="version">Version #{{#vernum}}</span>
             </span>
          </div>
