--- a/index.html
+++ b/index.html
@@ -111,9 +111,8 @@
                                        <span class="friendPlayerLevelNum">62</span>
                                     </div>
                                  </div>
-                              </a>
                               <div class="profile_header_badge">
-                                       <a href="https://discord.gg/jnqnHuX" target="_blank"><img src="https://discordapp.com/api/guilds/304986224467378177/widget.png?style=banner2" style="height: 87%;top: 4px;left: 5px;position: relative;">
+                                 <a href="https://discord.gg/jnqnHuX" target="_blank"><img src="https://discordapp.com/api/guilds/304986224467378177/widget.png?style=banner2" style="height: 87%;top: 4px;left: 5px;position: relative;"></a>
                               </div>
                            </div>
                            <div class="profile_header_actions">
