Updated video guide. Thank you SibunA <3

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
          <div class="content" id="cardsList">
             <div style="margin-top: 5px;">
                <span>Filter: <input type="text" id="filterIn"></span>
-               <span><a class="top_hint" href="https://www.youtube.com/watch?v=6Bj6oxaN5DY">
+               <span><a class="top_hint" href="https://www.youtube.com/watch?v=MVws18QLOi8">
                Video Guide!</a></span>
                <div id="steamAuth" style="float:right"></div>
                <div id="hideBacksList" onclick="hideBacksList();" style="float:right">
