Further additions to workshop showcase.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <link href="./css/header.css" rel="stylesheet" type="text/css" >
       <link href="./css/economy.css" rel="stylesheet" type="text/css">
       <link href="./css/economy_inventory.css" rel="stylesheet" type="text/css">
-	  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+      <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
       <link rel="stylesheet" href="./css/slider.css">
       <link rel="stylesheet" href="./css/index.css">
       <!-- endbuild -->
@@ -88,12 +88,12 @@
                               Canada					
                            </div>
                            <div class="bg_link">
-                           <div class="gray_bevel for_text_input">
-                              <input class="dynInput" type="text" name="real_name" id="urlIn" size="30" placeholder="You can paste a custom image URL here...">
-                           </div>
-                           <div class="btn_profile_action btn_medium" id="goUrl">
-                              <span>Change BG</span>
-                           </div>
+                              <div class="gray_bevel for_text_input">
+                                 <input class="dynInput" type="text" name="real_name" id="urlIn" size="30" placeholder="You can paste a custom image URL here...">
+                              </div>
+                              <div class="btn_profile_action btn_medium" id="goUrl">
+                                 <span>Change BG</span>
+                              </div>
                            </div>
                         </div>
                         <div class="playerAvatar playerAvatarAutoSize profile_header_size offline">
@@ -103,12 +103,12 @@
                         </div>
                         <div class="profile_header_badgeinfo">
                            <div class="profile_header_badgeinfo_badge_area">
-                                 <div class="persona_name persona_level">
-                                    <span>Level&nbsp;</span>
-                                    <div class="friendPlayerLevel lvl_60">
-                                       <span class="friendPlayerLevelNum">62</span>
-                                    </div>
+                              <div class="persona_name persona_level">
+                                 <span>Level&nbsp;</span>
+                                 <div class="friendPlayerLevel lvl_60">
+                                    <span class="friendPlayerLevelNum">62</span>
                                  </div>
+                              </div>
                               <div class="profile_header_badge">
                                  <a href="https://discord.gg/jnqnHuX" target="_blank"><img src="https://discordapp.com/api/guilds/304986224467378177/widget.png?style=banner2" style="height: 87%;top: 4px;left: 5px;position: relative;"></a>
                               </div>
@@ -129,7 +129,7 @@
                            <div class="header_real_name_spacer">&nbsp;</div>
                            <div class="profile_summary">
                               <div class="bb_h1" style="top:20px; position: relative; text-align:center;"> 
-                                    <b><a class="bb_link" href="http://paypal.me/theoddball" target="_blank" rel="noreferrer">Like what we're doing? Consider donating? :D</a></b>
+                                 <b><a class="bb_link" href="http://paypal.me/theoddball" target="_blank" rel="noreferrer">Like what we're doing? Consider donating? :D</a></b>
                               </div>
                            </div>
                            <div class="profile_summary_footer">
@@ -234,6 +234,54 @@
                                     </a>
                                  </div>
                                  <div style="clear: both;"></div>
+                              </div>
+                           </div>
+                        </div>
+                        <div class="profile_customization" style="display:none">
+                           <div class="profile_customization_header">
+                              Workshop Showcase	
+                           </div>
+                           <div class="myworkshop_showcase_header">
+                              <div class="playerAvatar online">
+                                 <a href="http://steamcommunity.com/id/wolfenstian/" data-miniprofile="68667764"><img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/avatars/cc/cc2ba4deaf53f2b916efa115de2437c87dfe9cf2_medium.jpg"></a>
+                              </div>
+                              <a href="http://steamcommunity.com/id/wolfenstian/myworkshopfiles/" class="myworkshop_playerName">
+                              SloWolfe's Workshop		</a>
+                           </div>
+                           <div class="profile_customization_block">
+                              <div class="myworkshop_showcase">
+                                 <div class="workshop_showcase_mutiitem_ctn">
+                                    <div class="workshop_showcase_multiitem showcase_slot ">
+                                       <div id="w1" style="height:150px;"></div>
+                                    </div>
+                                 </div>
+                                 <div class="workshop_showcase_mutiitem_ctn">
+                                    <div class="workshop_showcase_multiitem showcase_slot ">
+                                       <div id="w2" style="height:150px;">=</div>
+                                    </div>
+                                 </div>
+                                 <div class="workshop_showcase_mutiitem_ctn">
+                                    <div class="workshop_showcase_multiitem showcase_slot ">
+                                       <div id="w3" style="height:150px;"></div>
+                                    </div>
+                                 </div>
+                                 <div class="workshop_showcase_mutiitem_ctn">
+                                    <div class="workshop_showcase_multiitem showcase_slot ">
+                                       <div id="w4" style="height:150px;"></div>
+                                    </div>
+                                 </div>
+                                 <div style="clear: left;"></div>
+                                 <div class="showcase_stats_row showcase_content_bg">
+                                    <a class="showcase_stat" href="http://steamcommunity.com/id/wolfenstian/myworkshopfiles/">
+                                       <div class="value">0</div>
+                                       <div class="label">Submissions</div>
+                                    </a>
+                                    <div class="showcase_stat">
+                                       <div class="value">147</div>
+                                       <div class="label">Followers</div>
+                                    </div>
+                                    <div style="clear: left;"></div>
+                                 </div>
                               </div>
                            </div>
                         </div>
@@ -683,7 +731,7 @@
             <span id="footerText">
             Powered by STEAM. Cookies help us deliver our services. By using our services, you agree to our use of cookies.<br>
             Made with love by <a href="https://steamcommunity.com/id/truecarry">TrueCarry</a> and <a href="https://steamcommunity.com/id/theoddball">The Oddball</a><br>
-               <span id="version">Version #{{#vernum}}</span>
+            <span id="version">Version #{{#vernum}}</span>
             </span>
          </div>
       </div>
