Workshop image release.

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                               </div>
                            </div>
                         </div>
-                        <div class="profile_customization" style="display:none">
+                        <div class="profile_customization" style="display:none" id="ws">
                            <div class="profile_customization_header">
                               Workshop Showcase	
                            </div>
@@ -257,7 +257,7 @@
                                  </div>
                                  <div class="workshop_showcase_mutiitem_ctn">
                                     <div class="workshop_showcase_multiitem showcase_slot ">
-                                       <div id="w2" style="height:150px;">=</div>
+                                       <div id="w2" style="height:150px;"></div>
                                     </div>
                                  </div>
                                  <div class="workshop_showcase_mutiitem_ctn">
