--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
       <title>Steam Background Cropper</title>
       <meta name="description" content="Steam Profile Background Crop Tool"/>
       <meta name="keywords" content="steam, profile, crop, steam profile, background crop, background crop tool" />
+      <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+      <link rel="manifest" href="/images/manifest.json">
+      <link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#2b5797">
+      <link rel="shortcut icon" href="/images/favicon.ico">
+      <meta name="apple-mobile-web-app-title" content="Steam.Design">
+      <meta name="application-name" content="Steam.Design">
+      <meta name="msapplication-config" content="/images/browserconfig.xml">
+      <meta name="theme-color" content="#2b5797"> 
       <!-- for Facebook -->
       <meta property="og:title" content="Steam Background Crop Tool" />
       <meta property="og:type" content="website" />
@@ -17,7 +27,6 @@
       <meta name="twitter:description" content="This tool will help you to create an awesome Steam profile!" />
       <meta name="twitter:image" content="https://i.imgur.com/Q8kS6es.png" />
       <meta name="twitter:url" content="https://steam.design/" />
-      <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
       <!-- build:css main.css -->
       <link href="./css/motiva_sans.css" rel="stylesheet" type="text/css" >
       <link href="./css/buttons.css" rel="stylesheet" type="text/css" >
@@ -29,7 +38,6 @@
       <link href="./css/header.css" rel="stylesheet" type="text/css" >
       <link href="./css/economy.css" rel="stylesheet" type="text/css">
       <link href="./css/economy_inventory.css" rel="stylesheet" type="text/css">
-      <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
       <link rel="stylesheet" href="./css/slider.css">
       <link rel="stylesheet" href="./css/index.css">
       <!-- endbuild -->
