lets not talk about this

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                            <div class="header_real_name_spacer">&nbsp;</div>
                            <div class="profile_summary">
                               <div class="bb_h1" style="top:20px; position: relative; text-align:center;"> 
-                                 <b><a class="bb_link" href="https://www.patreon.com/steamdesign" target="_blank" rel="noreferrer">Like what we're doing? Consider supporting us on Pateron?</a></b>
+                                 <b><a class="bb_link" href="https://www.patreon.com/steamdesign" target="_blank" rel="noreferrer">Like what we're doing? Consider supporting us on Patreon?</a></b>
                               </div>
                            </div>
                            <div class="profile_summary_footer">
