Moved more stuff around and made hidebackslist button only show when logged in

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
       <div id="global_header">
          <div class="content" id="cardsList">
             <div style="margin-top: 5px;">
-               <span>Filter: <input type="text" id="filterIn"></span>
+               <span class="filter">Filter: <input type="text" id="filterIn"></span>
                <span><a class="top_hint" href="https://www.youtube.com/watch?v=MVws18QLOi8">
                Video Guide!</a></span>
                <div id="steamAuth" style="float:right"></div>
-               <div id="hideBacksList" onclick="hideBacksList();" style="float:right">
+               <div id="hideBacksList" onclick="hideBacksList();" style="float:right; display:none;">
                   <img id="backsListImage" src="https://steamcommunity-a.akamaihd.net/public/images/skin_1/arrowDn9x5.gif" style="margin-right: 10px;">
                </div>
             </div>
