fixed showing backs hide button and updated front page again

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                            <div class="header_real_name_spacer">&nbsp;</div>
                            <div class="profile_summary">
                               <div class="bb_h1" style="top:20px; position: relative; text-align:center;"> 
-                                 <b><a class="bb_link" href="https://www.patreon.com/steamdesign" target="_blank" rel="noreferrer">Like what we're doing? Consider supporting us on Patreon?</a></b>
+                                 <b>Find us on: <a class="bb_link" href="https://www.patreon.com/steamdesign" target="_blank" rel="noreferrer">Patreon</a> | <a class="bb_link" href="https://github.com/sapic/sapic" target="_blank" rel="noreferrer">GitHub</a></b>
                               </div>
                            </div>
                            <div class="profile_summary_footer">
@@ -294,7 +294,7 @@
                            </div>
                         </div>
                         <div class="profile_customization">
-                           <div class="profile_customization_header">
+                           <div class="profile_customization_header guide">
                               Favorite Guide	
                            </div>
                            <div class="profile_customization_block">
