--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                               <div class="gray_bevel for_text_input">
                                  <input class="dynInput" type="text" name="real_name" id="urlIn" size="30" placeholder="You can paste a custom image URL here...">
                               </div>
-                              <div class="btn_profile_action btn_medium" id="goUrl" style="left:2px; position:relative;">
+                              <div class="btn_profile_action btn_medium" id="goUrl" style="left:4px; position:relative;">
                                  <span>Change BG</span>
                               </div>
                            </div>
@@ -125,7 +125,7 @@
                               <div class="btn_profile_action btn_medium" id="toggleLong" onclick="toggleLong()">
                                  <span>Toggle Long Images</span>
                               </div>
-                              <div class="btn_profile_action btn_medium" id="randomBG" style="left:2px; position:relative;">
+                              <div class="btn_profile_action btn_medium" id="randomBG" style="left:3px; position:relative;">
                                  <span>Random BG</span>
                               </div>
                            </div>
@@ -142,8 +142,8 @@
                            </div>
                            <div class="profile_summary_footer">
                               <div class="btn_profile_action btn_medium" id="getBg"><span>Search For This BG</span></div>
-                              <a class="btn_profile_action btn_medium saveButton" id="saveAll" style="left:1px; position:relative;"><span>Download ZIP</span></a>
-                              <a class="btn_profile_action btn_medium" id="userScript" href="https://github.com/theoddball/sapic-preview-button" style="left:2px; position:relative;"><span>Preview Script</span></a>
+                              <a class="btn_profile_action btn_medium saveButton" id="saveAll" style="left:3px; position:relative;"><span>Download ZIP</span></a>
+                              <a class="btn_profile_action btn_medium" id="userScript" href="https://github.com/theoddball/sapic-preview-button" style="right:1px; position:relative;"><span>Preview Script</span></a>
                            </div>
                         </div>
                      </div>
