One more shot for ads

--- a/index.html
+++ b/index.html
@@ -724,8 +724,10 @@
                            </div>
                         </div>
                      </div>
-                     <div class="underfr" width="268"></div>
+                     <div class="underfr" width="268">
+                     </div>
                   </div>
+                  <div id="leftColAds"></div>
                </div>
                <div style="clear: both;"></div>
             </div>
@@ -758,6 +760,10 @@
         ga('create', 'UA-98294219-1', 'auto');
         ga('send', 'pageview');
 
+      </script>
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
       </script>
    </body>
 </html>
