--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       <meta name="apple-mobile-web-app-title" content="Steam.Design">
       <meta name="application-name" content="Steam.Design">
       <meta name="msapplication-config" content="/images/browserconfig.xml">
-      <meta name="theme-color" content="#2b5797"> 
+      <meta name="theme-color" content="#2b5797">
+      <meta name="google-site-verification" content="bohKQMzUSNTnkPrEz27bgyzAFbTAOWhFTgKwrnejHEE" />
       <!-- for Facebook -->
       <meta property="og:title" content="Steam Background Crop Tool" />
       <meta property="og:type" content="website" />
