--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
       <title>Steam Background Cropper</title>
       <meta name="description" content="Steam Profile Background Crop Tool"/>
       <meta name="keywords" content="steam, profile, crop, steam profile, background crop, background crop tool" />
-      <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
-      <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
-      <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
-      <link rel="manifest" href="/images/manifest.json">
-      <link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#2b5797">
-      <link rel="shortcut icon" href="/images/favicon.ico">
+      <link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
+      <link rel="manifest" href="./images/manifest.json">
+      <link rel="mask-icon" href="./images/safari-pinned-tab.svg" color="#2b5797">
+      <link rel="shortcut icon" href="./images/favicon.ico">
       <meta name="apple-mobile-web-app-title" content="Steam.Design">
       <meta name="application-name" content="Steam.Design">
-      <meta name="msapplication-config" content="/images/browserconfig.xml">
+      <meta name="msapplication-config" content="./images/browserconfig.xml">
       <meta name="theme-color" content="#2b5797">
       <meta name="google-site-verification" content="bohKQMzUSNTnkPrEz27bgyzAFbTAOWhFTgKwrnejHEE" />
       <!-- for Facebook -->
@@ -50,6 +50,7 @@
       <script src="./js/FileSaver.js"></script>
       <script src="./js/jszip.js"></script>
       <script src="./js/index.js"></script>
+      <script src="./js/ads.js" type="text/javascript"></script>
       <!-- endbuild -->
       <script></script>
    </head>
