--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       <link href="./css/header.css" rel="stylesheet" type="text/css" >
       <link href="./css/economy.css" rel="stylesheet" type="text/css">
       <link href="./css/economy_inventory.css" rel="stylesheet" type="text/css">
+      <link href="./css/font-awesome.min.css" rel="stylesheet" type="text/css">
       <link rel="stylesheet" href="./css/slider.css">
       <link rel="stylesheet" href="./css/index.css">
       <!-- endbuild -->
@@ -63,10 +64,9 @@
                <span class="filter">Filter: <input type="text" id="filterIn"></span>
                <span><a class="top_hint" href="https://www.youtube.com/watch?v=MVws18QLOi8">
                Video Guide!</a></span>
+               <div id="refreshInventory" class="fa fa-refresh" onclick="refreshInventory();" style="position:relative; top:2px; left:0px; cursor:pointer; display:none;"></div>
+               <div id="hideBacksList" class="fa fa-arrow-up" onclick="hideBacksList();" style="position:relative; top:2px; left:5px; cursor:pointer; display:none;"></div>
                <div id="steamAuth" style="float:right"></div>
-               <div id="hideBacksList" onclick="hideBacksList();" style="float:right; display:none;">
-                  <img id="backsListImage" src="https://steamcommunity-a.akamaihd.net/public/images/skin_1/arrowDn9x5.gif" style="margin-right: 10px;">
-               </div>
             </div>
             <div class="backsList" id="backsList"></div>
          </div>
