--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       <script src="./js/jszip.js"></script>
       <script src="./js/index.js"></script>
       <script src="./js/ads.js" type="text/javascript"></script>
+      <script src="./js/store.everything.min.js"></script>
       <!-- endbuild -->
       <script></script>
    </head>
