actually make adblock detection work

--- a/index.html
+++ b/index.html
@@ -496,10 +496,47 @@
                         <div style="clear: right;"></div>
                      </div>
                   </div>
-                  <div class="profile_rightcol">
+                  <div class="profile_rightcol" >
                      <div class="profile_in_game persona offline">
                         <div class="profile_in_game_header">Currently Offline</div>
                         <div class="profile_in_game_name">Last Online: 9 hrs, 35 mins ago</div>
+                     </div>
+                      <div class="profile_badges"style="display:none;">
+                        <div class="profile_count_link_preview_ctn">
+                           <div class="profile_count_link ellipsis">
+                              <a href="http://steamcommunity.com/id/wolfenstian/badges/">
+                              <span class="count_link_label">Badges</span>&nbsp;
+                              <span class="profile_count_link_total">
+                              59															</span>
+                              </a>
+                           </div>
+                           <div class="profile_count_link_preview">
+                              <div class="profile_badges_badge " data-community-tooltip="The Untrained Eye<br>
+                                 Level 3 The Decimation of Olarath Badge">
+                                 <a href="http://steamcommunity.com/id/wolfenstian/gamecards/491250">
+                                 <img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/items/491250/6f6134e5884d571dbaa1db095ebc3f60cfedd266.png">
+                                 </a>
+                              </div>
+                              <div class="profile_badges_badge " data-community-tooltip="This is Ðoge.<br>
+                                 Level 1 Montaro Badge">
+                                 <a href="http://steamcommunity.com/id/wolfenstian/gamecards/495890">
+                                 <img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/items/495890/9a6581210cc7a909727036b36ee0a34983bb62ee.png">
+                                 </a>
+                              </div>
+                              <div class="profile_badges_badge " data-community-tooltip="General<br>
+                                 Level 5 The Chosen RPG Badge">
+                                 <a href="http://steamcommunity.com/id/wolfenstian/gamecards/434420">
+                                 <img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/items/434420/dfcf0e4a4c1ea3e66d66ad22feb87bfb15538c76.png">
+                                 </a>
+                              </div>
+                              <div class="profile_badges_badge last" data-community-tooltip="Community Leader">
+                                 <a href="http://steamcommunity.com/id/wolfenstian/badges/2">
+                                 <img src="http://steamcommunity-a.akamaihd.net/public/images/badges/01_community/communityleader_54.png">
+                                 </a>
+                              </div>
+                              <div style="clear: left;"></div>
+                           </div>
+                        </div>
                      </div>
                      <div id="leftColAds"></div>
                      <div class="profile_item_links">
