true is a big derp

--- a/index.html
+++ b/index.html
@@ -497,11 +497,11 @@
                      </div>
                   </div>
                   <div class="profile_rightcol" >
-                    <div id="leftColAds"></div>
                      <div class="profile_in_game persona offline">
                         <div class="profile_in_game_header">Currently Offline</div>
                         <div class="profile_in_game_name">Last Online: 9 hrs, 35 mins ago</div>
                      </div>
+                    <div class="rColAds"></div> 
                       <div class="profile_badges"style="display:none;">
                         <div class="profile_count_link_preview_ctn">
                            <div class="profile_count_link ellipsis">
@@ -731,6 +731,7 @@
                      <div class="underfr" width="268">
                      </div>
                   </div>
+                  <div id="bottomAds"></div>
                </div>
                <div style="clear: both;"></div>
             </div>
