another small fix

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                                        <div id="big1" class="imageHolder"></div>
                                     </div>
                                     <div class="screenshot_showcase_itemname" style="color: #5491cf; font-weight: bold;">
-                                       Drag bottom of image to resize <div class="fa fa-arrow-up" style="font-size:10px;"></div>					
+                                       Drag bottom of image to resize&nbsp;<div class="fa fa-arrow-up" style="font-size:10px;"></div>					
                                     </div>
                                     <div class="screenshot_showcase_stats">
                                        <span class="screenshot_showcase_stat" title="Комментарии">
