--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
       <script src="./js/FileSaver.js"></script>
       <script src="./js/jszip.js"></script>
       <script src="./js/index.js"></script>
-      <script src="./js/ads.js" type="text/javascript"></script>
       <script src="./js/store.everything.min.js"></script>
+      <!-- endbuild -->
+      <!-- build:js2 ads.js -->
+      <script src="./js/ads.js" type="text/javascript"></script>
       <!-- endbuild -->
       <script></script>
    </head>
