--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
       <script src="./js/index.js"></script>
       <script src="./js/store.everything.min.js"></script>
       <!-- endbuild -->
-      <!-- build:js2 ads.js -->
-      <script src="./js/ads.js" type="text/javascript"></script>
-      <!-- endbuild -->
+      <script src="ads.js"></script>
       <script></script>
    </head>
    <body>
