--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <script src="./js/index.js"></script>
       <script src="./js/store.everything.min.js"></script>
       <!-- endbuild -->
-      <script src="./js/fuckadblock.js"></script>
+      <script src="fuckadblock.js"></script>
       <script></script>
    </head>
    <body>
