added visual que to long images

--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
                               </div>
                            </div>
                            <div class="profile_header_actions">
-                              <div class="btn_profile_action btn_medium" id="toggleLong" onclick="toggleLong()">
-                                 <span>Toggle Long Images</span>
+                              <div class="btn_profile_action btn_medium" style="left:7px; position:relative;" id="toggleLong" onclick="toggleLong()">
+                                 <span class="toggletext" style="width:130px; text-align:center; ">Toggle Short Images</span>
                               </div>
                               <div class="btn_profile_action btn_medium" id="randomBG" style="left:3px; position:relative;">
                                  <span>Random BG</span>
