--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
                               </div>
                            </div>
                            <div class="profile_summary_footer">
-                              <div class="btn_profile_action btn_medium" id="getBg"><span>Search For This BG</span></div>
-                              <a class="btn_profile_action btn_medium saveButton" id="saveAll" style="left:3px; position:relative;"><span>Download ZIP</span></a>
-                              <a class="btn_profile_action btn_medium" id="userScript" href="https://github.com/theoddball/sapic-preview-button" style="right:1px; position:relative;"><span>Preview Script</span></a>
+                              <div class="btn_profile_action btn_medium" id="getBg"><span>Get This BG</span></div>
+                              <a class="btn_profile_action btn_medium saveButton" id="saveAll"><span>Download ZIP</span></a>
+                              <a class="btn_profile_action btn_medium" id="userScript" href="https://chrome.google.com/webstore/detail/mjmabgdoainclinjecbkdancpamdiaih/publish-accepted?hl=en-US&gl=US"><span>Chrome Extension</span></a>
                            </div>
                         </div>
                      </div>
