--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                            <div class="profile_summary_footer">
                               <div class="btn_profile_action btn_medium" id="getBg"><span>Get This BG</span></div>
                               <a class="btn_profile_action btn_medium saveButton" id="saveAll"><span>Download ZIP</span></a>
-                              <a class="btn_profile_action btn_medium" id="userScript" href="https://chrome.google.com/webstore/detail/mjmabgdoainclinjecbkdancpamdiaih/publish-accepted?hl=en-US&gl=US"><span>Chrome Extension</span></a>
+                              <a class="btn_profile_action btn_medium" id="userScript" href="https://chrome.google.com/webstore/detail/mjmabgdoainclinjecbkdancpamdiaih/"><span>Chrome Extension</span></a>
                            </div>
                         </div>
                      </div>
