add top ads if not logged in

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
                <div id="hideBacksList" class="fa fa-arrow-up" onclick="hideBacksList();" style="position:relative; top:2px; left:-10px; cursor:pointer; display:none;"></div>
                <div id="steamAuth" style="float:right"></div>
             </div>
-            <div class="backsList" id="backsList"></div>
+            <div class="backsList" id="backsList">
+              <div id="topAds"></div>
+            </div>
          </div>
       </div>
       <div class="body">
