--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                <div id="steamAuth" style="float:right"></div>
             </div>
             <div class="backsList" id="backsList">
-              <div id="topAds"></div>
+              <div id="topAds" style="position:relative; left:9%;"></div>
             </div>
          </div>
       </div>
